--- a/Feb/25-02-04.md
+++ b/Feb/25-02-04.md
@@ -1,12 +1,12 @@
-💬 데일리 스크럼 💬
+# 💬 데일리 스크럼 💬
 - 스레드 내용 복습
 ***
-🧑🏻‍💻 학습한 내용 🧑🏻‍💻
+# 🧑🏻‍💻 학습한 내용 🧑🏻‍💻
 
 ***
 회고
-💪 K (Keep) 💪
+# 💪 K (Keep) 💪
 
-😫 P (Problem) 😫
+# 😫 P (Problem) 😫
 
-🫵 T (Try) 🫵
+# 🫵 T (Try) 🫵
