--- a/Feb/25-02-06.md
+++ b/Feb/25-02-06.md
@@ -1,17 +1,475 @@
 # 💬 데일리 스크럼 💬
-- 동시성, 스케줄러, 병렬성, 공유자원, 임계영역, 동기화를 알아보자..!
+- 동시성, 스케줄러, 병렬성을 알아보자..!
 - 2주차 과제 비동기 프로그램으로의 전환을 해보자
 ***
 # 🧑🏻‍💻 학습한 내용 🧑🏻‍💻
+# 동시성
 
+> 동시성 : 논리적으로 동시에 작업이 처리되고 있다고 보여지는 것
+> 
+
+---
+
+동시성은 CPU의 현란한 퍼포먼스를 보여준다고 볼 수 있다.
+
+CPU가 여러 작업을 매우 빠른 속도로 전환해가며 처리하게 되는데 이로인해 사용자는 여러 작업이 동시에 처리되는줄 알게 된다.
+
+# 병렬성
+
+> 병렬성 : 물리적으로 멀티 cpu 또는 멀티 프로세스에 의해 동시에 작업이 처리되는 것
+> 
+
+---
+
+병렬성은 2개 이상의 CPU 또는 멀티 프로세스에 의해 여러 작업이 물리적으로 동시에 처리되는 것이다.
+
+따라서, 고화질 이미지 처리와 같은 무거운 작업에서 매우 효율적인 방식이다.
+
+### 동작 방식은 다음과 같다.
+
+1. 하나의 이미지를 작은 이미지 블록으로 나누기
+2. 각 영역을 CPU에 할당
+3. 코어가 자신이 맡은 영역의 이미지를 보정하게 됨
+4. 각각의 코어가 마친 작업을 하나의 이미지로 병합하게됨
+5. 만약 에러가 발생했다면 발생한 영역의 보정처리를 다시 작업
+
+# 스케줄러
+
+> 스케줄러 : 스레드 또는 프로세스의 작업 순서를 결정하는 역할
+> 
+
+---
+
+스케줄러는 OS에서 핵심적인 역할을 가지고 있으며, 스케줄링 알고리즘을 이용하여 스레드와 프로세스의 작업 순서를 관리하게 된다.
+
+작업 순서를 관리하면서 CPU 및 자원의 효율성을 극대화 하는 아주 중요한 역할을 하게된다.
+
+### 동작방식은 다음과 같다.
+
+1. 실행을 대기중인 프로세스 또는 스레드를 대기열(큐)에 배치
+2. 작업의 우선순위를 따져 실행 순서 결정
+3. 각 작업에 필요한 자원(메모리, CPU)을 할당
+4. **컨텍스트 스위칭**을 이용하여 작업간 전환
+5. 작업 완료된 프로세스 또는 스레드에게 할당된 자원을 회수
+
+작업들이 번갈아가며 수행될 때 이를 **컨텍스트 스위칭**이라 볼 수 있는데, 컨텍스트 스위칭은 스케줄러와 아주 밀접한 관계를 가지고있다.
+
+# 라운드로빈 스케쥴링
+
+> 라운드로빈  : 각 작업의 우선순위가 없이 할당된 시간만큼 작업하는 선점형 스케줄링 방식
+> 
+
+---
+
+라운드로빈(RR)은 CPU 스케줄링 방식중 하나이다.
+
+동작 방식은 다음과 같은데 매우 간단하다.
+
+1. 전체 프로세스 또는 스레드의 실행 시간을 정한다.
+2. 정해진 시간만큼 **순서대로** 작업을 진행한다.
+
+해당 알고리즘은 각 작업에 **우선순위가 존재하지 않는다**는 특징또한 가지고있다.
+
+(모든 프로세스가 동등한 기회를 가지게됨)
+
+(단, Priority RR이라는 것이 존재)
+
+만약 각 작업에 우선순위가 존재한다면 할당된 시간만큼 작업한다는 라운드 로빈 알고리즘에 반대되는 상황이라고 볼 수 있다.
+
+라운드로빈은 선점형 스케줄링 방식인데, 이는 정해진 시간만큼 작업한다는 특징에서 기인된 것이다.
+
+작업 시간이 딱 끝나게 되면, 이를 강제로 중단하고 다음 작업을 실행하기 때문이다.
+
+# (선택) 콘보이 현상
+
+> 콘보이 현상 : 작업시간이 긴 작업이 실행되어 다른 프로세스의 작업시간이 모두 늦춰져 효율성이 떨어지는 현상
+> 
+
+---
+
+콘보이 현상은 한 작업의 작업시간이 너무 길어서 다른 프로세스 작업이 모두 늦춰져 효율성이 떨어지는 현상을 말한다.
+
+이러한 현상은 FCFS 알고리즘에서 발생할 수 있다.
+
+FCFS 알고리즘의 이러한 특징 때문에 콘보이 현상이 발생하게 되는데 알아보자.
+
+FCFS는 First Come First Serve로 선입선출을 말한다.
+
+따라서, 작업시간이 **매우 긴 작업이 먼저 도착한 경우** 작업 시간이 짧은 작업들은 해당 작업이 끝날 때 까지 기다려야 하는데 이때, 콘보이현상이 발생하게 된다.
+
+# (선택) 선점형 /  비선점형 스케쥴링
+
+> 선점형 스케줄링 : 다음 작업을 위해 현재 실행중인 작업을 강제 중단 시킬 수 있는 스케줄링 방식
+> 
+
+> 비선점형 스케줄링 : 실행중인 프로세스 또는 스레드를 강제 중단 시킬 수 없는 스케줄링 방식
+> 
+
+---
+
+## 선점형 스케줄링
+
+해당 스케줄링 방식은 말그대로 ‘선점’을 할 수 있다. 
+
+선점하는 기준은 다음이 될 수 있다.
+
+- 더 높은 우선순위 작업이 생성된 경우
+- 할당된 시간이 지난 경우
+
+위의 두 상황이 오게되면 스케줄러는 **현재 작업을 중단**시키고 **다음 작업을 바로 실행**하게 된다.
+
+해당 스케줄링 방식에는 다음과 같은 알고리즘이 있다.
+
+- **라운드 로빈 (RR)**
+    - 시분할 방식을 사용하여 각 프로세스에 일정 시간(Time Slice)을 할당
+    - 정해진 시간만큼만 작업
+- **SRT (Shortest Remaining Time)**
+    - SJF의 선점형 버전
+    - 현재 작업보다 작업시간이 더 조금 남은 작업이 온다면 선점
+- **MLQ (Multi Layer Queue)**
+    - 여러 우선순위 큐를 사용하여 프로세스를 분리
+    - 각 큐마다 서로다른 스케줄링 방식을 사용
+- **MLFQ (Multi Layer Feedback Queue)**
+    - 프로세스가 실행되는 동안 동적으로 우선순위를 변경할 수 있는 방식
+
+## 비선점형 스케줄링
+
+비선점형 스케줄링은 다른 작업이 생기더라도 **현재 작업을 중단할 수 없는** 스케줄링 방식이다.
+
+즉, 강제적으로 자원을 회수할 수 없으며, 다른 작업들은 해당 작업이 완료될 때 까지 기다려야 한다.
+
+비선점형 스케줄링 방식에는 다음과 같은 종류가 있다.
+
+- SJF(Shortest Job First)
+    - 실행 시간이 가장 짧은 작업을 먼저 실행하는 방식
+- FCFS (First Come First Serve)
+    - 도착한 순서대로 프로세스를 실행하는 방식
+- HRN (High Response Ratio Next)
+    - 기아문제를 해결하기 위해 우선순위를 동적으로 계산한 방식
+    - 실행시간이 짧고 대기를 오래한만큼 우선순위가 높아짐
+
+# 컨텍스트 스위칭
+
+> 컨텍스트 스위칭 : 다음 작업을 위해 이전 작업의 정보(컨텍스트)를 저장하고 다음 작업의 정보를 불러와 CPU에서 실행시키는 것
+> 
+
+---
+
+컨텍스트 스위칭은 실행중인 프로세스 또는 스레드를 위해 현재 프로세스의 컨텍스트를 저장하고 다음 실행할 프로세스의 컨텍스트를 복원하는 과정을 말한다.
+
+CPU에서는 여러 작업이 번갈아가며 다양한 작업이 수행되게 되는데 작업이 바뀌는 과정이 컨텍스트 스위칭이라고 볼 수 있다.
+
+즉, 동시성에서 논리적으로 여러 작업이 동시에 돌아가는것 처럼 보이는게 컨텍스트 스위칭이 활발하게 일어나고 있는것이다.
+
+**컨텍스트**에는 다음과 같은 정보가 담겨있다.
+
+- **CPU 레지스터**
+    - 일반 레지스터
+    - 프로그램 카운터 (PC)
+    - 스택 포인터 (SP)
+    - 플래그 레지스터 (FR)
+- **프로세스 상태**
+    - `준비` `실행` `대기` `종료` 의 상태 중 하나를 가지게 된다.
+- **메모리 관리 정보**
+    - 프로세스가 사용하는 메모리 관련 정보이다.
+    - 페이지 테이블
+    - 세그먼트 테이블
+
+# 스레드풀
+
+> 스레드풀 : 스레드를 미리 생성하여 관리하는 방식
+> 
+
+---
+
+Thread Pool 은 일정 개수의 스레드를 미리 생성해두고 관리하는 방식을 말한다.
+
+스레드를 미리 만들어두고 해당 스레드를 통해 작업을 처리하기 때문에 다음과 같은 **이점**이있다.
+
+- 스레드 **생성**, **삭제시** 발생하는 **비용을 줄일 수 있다**.
+- 일정 개수의 스레드가 유지되기 때문에 **컨텍스트 스위칭 오버헤드 감소**
+- 스레드가 무한정 생성되지 않기 때문에 **메모리 관리가 효율**적임
+    - 요청이 몰리게 됐을때 무한정 스레드가 생성되는걸 막을 수 있음
+    - 따라서, 많은 스레드의 생성으로 인한 메모리 부족현상을 방지할 수 있음
+- **데드락 발생 가능성 감소**
+
+# (선택) 암달의 법칙
+
+> 암달의 법칙 : 일부를 개선했을때 컴퓨터 전체적으로 성능향상이 얼마나 있는지 계산하는 법칙
+> 
+
+---
+
+**암달의 법칙**은 **암달의 저주**라고도 불린다고한다.
+
+해당 법칙은 컴퓨터 시스템의 일부분을 개선했을 때, 전체적으로 봤을 때 얼마만큼의 성능향상이 있는지를 계산할 수 있는 법칙이며, 다음과같은 수식을 가지고있다.
+
+$$
+\frac{1}{(1 - P) + \frac{P}{S}}
+$$
+
+(전체 작업시간에 대해 P만큼 작업시간을 차지하는 작업의 효율을 S만큼 향상 시켰다.)
+
+예를 들어 전체 작업의 10프로를 차지하는 작업의 효율을 2배 증가 시키면 다음과 같다.
+
+$$
+\frac{1}{(1 - 0.1) + \frac{0.1}{2}} = \frac{1}{0.95} \approx 1.0526
+$$
+
+결과값을 보면 10프로의 작업에 대해 2배의 효율을 높였지만 전체 시스템에서는 1.05 만큼의 성능향상을 가져오게 된다.
+
+이러한 현상은 CPU나 GPU가 다른 하나에 비해 과도하게 세대 차이가 날때 발생할 수 있다.
+
+다음과 같은 예시로 쉽게 이해할 수 있을거같다.
+
+A와 B가 이어달리기를 한다고 했을 때 A는 엘리트 체육인이고 B는 일반 시민이라는 가정하에,
+
+A는 매우 빠르게 달리겠지만 B는 A에 비해 매우 느릴것이다. 하지만 이어달리기 이므로 결과는 A + B의 달리기 시간이 될것이다. 
+
+따라서, 너무 큰 차이가 발생할 경우 예상했던 성능 향상을 느끼지 못할것이다.
+
+만약 성능향상을 가져오고싶다면 다음을 고려해보자.
+
+- 가장 비중이 큰 작업에 초점을 맞춰서 성능향상을 도모하자.
+
+아래의 그림을 보면 왜 암달의 저주라고 불리는지도 예상이 간다.
+
+아무리 컴퓨터가 늘어나더라도 속도의 향상에는 한계가있기 때문이다….
+
+![image](https://github.com/user-attachments/assets/ecf48c3f-2b0c-422c-9053-44063e942016)
+
+
+출처 : https://namu.wiki/w/%EC%95%94%EB%8B%AC%EC%9D%98%20%EB%B2%95%EC%B9%99
+
+# (선택) c10k 문제
+
+> c10k : 동시사용자 1만명이 접속하는 서버를 구현하는 문제
+> 
+
+---
+
+C10K는 1999년 Dan Kegel 이라는 개발자가 제기한 문제입니다.
+
+‘동시 사용자 1만명이 접속하는 서버를 어떻게 구현할 수 있을까?’
+
+사실 25년인 현재 EC2를 사용하고, 스프링부트를 이용해서 개발 한다면 사실상 5만명 ~ 10만명 단위까지도 큰 문제가 없을거 같습니다. 
+
+본론으로 돌아와서 어떻게 하면 동접자 1만명의 서버를 문제없이 구현할 수 있을까요?
+
+단순하게 생각해봅시다.
+
+각 사용자를 위해 1만개의 스레드를 만들어서 대기시키는건 어떨까요?
+
+뭐,,, 돌아가겠죠? 돌아는 갈겁니다. 하지만 이런 1차원적인 사고는 저희의 실력 향상에 전혀 도움이 되지 않습니다.
+
+만약 싱글 코어 CPU라고 상상해봅시다. 정말 끔찍할겁니다. 
+
+1만개의 스레드를 위해 컨텍스트 스위칭이 발생할것이며, 공유자원에 접근하기위해 아주 열심히 싸울것입니다. 결국 오버헤드가 커지고 메모리 낭비가 심할것입니다.
+
+이를 해결하기 위해 논블로킹 비동기 작업을 떠올렸다면 여러분은 성공한겁니다.
+
+논블로킹 + 비동기 조합을 사용한다면 만명의 동접자를 위해 만개의 스레드를 만들어놓을 필요가 없습니다. 적당한 개수의 스레드를 만들어놓고 요청을 처리하면 되는거죠.
+
+만약 IO 작업이 발생한다면 해당 스레드는 요청만 한후 즉시 다른 작업을 하러 갈것입니다. 이러한 논블로킹의 특성과 IO작업의 완료를 알림을 통해 받을 수 있는 비동기방식의 사용으로 인해 효율적으로 C10K 문제를 해결할 수 있을것이라 볼 수 있습니다.
+
+<aside>
+❓
+
+논블로킹 + 비동기 모델을 활용한 기술들
+
+</aside>
+
+<aside>
+❗
+
+`Netty`  `Node.js` `Spring WebFlux` `Goroutine`
+
+</aside>
+
+# 동시성과 병렬성의 차이를 설명해주세요 (멀티 쓰레드 환경에서의 동시성과 병렬성을 설명해주세요)
+
+---
+
+멀티스레드 환경이란 한 프로세스 내에서 2개 이상의 스레드가 생성되어 동시에 실행되는 환경이다.
+
+이러한 멀티스레드 환경에서는 CPU 코어의 개수에 따라 동시성과 병렬성이 모두 가능하게 된다.
+
+### 싱글 CPU인 상황에서의 멀티스레드 환경
+
+CPU 코어가 하나인 싱글코어의 경우 **동시성만** 만족시킬 수 있다.
+
+이는 컨텍스트 스위칭을 이용하여 하나의 CPU에서 여러 작업을 번갈아가며 할 수 있게된다는 것이다.
+
+다만, 싱글 CPU에서는 **병렬성**을 만족시킬 수 없다.
+
+멀티스레드 환경이더라도 CPU가 하나이기 때문에 물리적으로 동시에 실행한다는 병렬성을 만족시킬 수 없게 된다.
+
+### 멀티 CPU인 상황에서의 멀티스레드 환경
+
+이러한 환경에서는 **동시성**과 **병렬성**을 모두 만족시킬 수 있다.
+
+멀티 CPU라도 하나의 CPU안에서 컨텍스트 스위칭을 이용한 **동시성**을 만족시킬 수 있다. 
+
+멀티 CPU에서는 각각의 CPU가 별도의 작업을 독립적으로 실행하게 된다. 이를 통해 병렬성을 만족시킬 수 있다.
+
+이때, 각각의 CPU에서는 독립적인 일을 처리하기에 **컨텍스트 스위칭 없이** 작업을 처리할 수 있다.
+
+단, 스레드의 개수가 CPU 개수 이하인 경우에 컨텍스트 스위칭 없이 작업이 가능하며, 반대의 경우엔 컨텍스트 스위칭이 필요하다.
+
+# 컨텍스트 스위칭이 발생할 때 생기는 부정적인 영향에 대해서 설명해주세요
+
+---
+
+컨텍스트 스위칭은 무조건 발생하게 되며, 동시성을 챙기기위해 필수적인 방식이다.
+
+하지만, 컨텍스트 스위칭이 발생하며 생기는 단점이 있기마련이다. 
+
+**단점**에는 다음과 같은 것들이 있을것이다.
+
+- 컨텍스트 스위칭을 하며 발생하는 비용
+- 잦은 컨텍스트 스위칭에 의해 오버헤드 발생
+- I/O 작업 지연
+- 멀티스레드 환경에서의 스레드간 동기화 문제
+
+### 컨텍스트 스위칭의 비용
+
+컨텍스트 스위칭이 발생하면 이전 작업의 정보(컨텍스트)는 저장해야하며 다음 작업의 정보(컨텍스트)를 복원해야한다. 이 과정에서 시간이 소모되게 된다.
+
+### 컨텍스트 스위칭 오버헤드
+
+너무 많은 스레드가 생성되어 잦은 컨텍스트 스위칭이 발생한 경우 오버헤드가 발생하게 된다.
+
+이는 작업 시간보다 컨텍스트 스위칭하는 시간이 더 많이 소모되는 문제가 발생할 수 있으며, CPU의 작업 시간 효율성을 매우 감소시키게 된다.
+
+### I/O 작업 지연
+
+만약 한 프로세스 또는 스레드가 IO 작업을 수행중에 컨텍스트 스위칭을 당하게되는 상황을 상상해보자.
+
+그러면 해당 IO 작업을 하던 스레드가 다시 CPU에 의해 실행될 때 까지 IO 작업 결과의 반환이 지연되게 된다.
+
+이러한 단점은 IO 작업이 중요한 서비스에서 성능 저하의 요인이 될 수 있다.
+
+### 멀티스레드 환경에서의 스레드간 동기화 문제
+
+멀티스레드 환경에서 컨텍스트 스위칭이 자주 일어나게되면 스레드간 공유자원 관리가 어려워진다.
+
+이는 여러가지 동기화 문제를 발생시키게 되는데 다음과 같다.
+
+- **경쟁 상태**(Race Condition) 발생 가능성 증가
+    - 여러 스레드가 동시에 공유자원에 접근하고 연산하려할 때, 연산 순서에 따라서 결과가 달라질 수 있다.
+- **데드락**(DeadLock = 교착상태) 위험 증가
+    - 데드락은 두 개 이상의 스레드가 서로 상대방의 리소스가 해제되기를 기다리면서 무한 대기상태에 빠지는 문제이다.
+- **기아문제**
+    - 우선순위가 높은 스레드가 계속 실행되면 낮은 우선순위의 스레드들이 실행되지 못하는 문제 발생
+
+# 스레드풀을 사용하는 이유와 장단점에 대해서 설명해주세요
+
+---
+
+스레드풀을 사용하는 이유는 스레드 관리의 효율성과 비효율적인 비용발생을 감소시킬 수 있기 때문이다.
+
+하지만, 스레드풀을 사용할때에도 장점과 단점이 동시에 있는데 이에 대해 알아보도록 하자.
+
+### 스레드풀의 장점
+
+스레드풀의 장점은 위에서도 계속 말해왔다.
+
+**스레드 생성 및 삭제에서 발생하는 비용을 줄일 수** 있으며, 일정 개수의 스레드로만 작업을 처리할 수 있기 때문에 **CPU 활용률도 좋아지게 된다**.
+
+또한, 스레드가 일정 개수 존재하기 때문에 **컨텍스트 스위칭 오버헤드의 발생을 감소**시킬 수 있다.
+
+### 스레드풀의 단점
+
+하지만, 개발에서 Silver Bullet은 없다고 한다.
+
+스레드풀 또한 단점을 가지고 있는데 다음과 같은 상황이다.
+
+### 스레드풀의 크기 문제
+
+스레드 풀을 활용하기에 앞서 스레드풀의 적절한 크기를 먼저 아는것이 중요하다.
+
+이는 구현하는 애플리케이션마다 모두 다를 수 있으며 잘못 설정한 경우 문제가 발생할 수 있다.
+
+- 스레드풀의 **크기가 너무 작은경우**
+    - 동시에 처리할 작업이 많으면 대기시간이 길어지고 성능저하가 발생하게된다.
+    - 데드락 가능성이 존재한다.
+- 스레드풀의 **크기가 너무 큰 경우**
+    - 스레드가 너무 많아져서 컨텍스트 스위칭 오버헤드가 발생한다.
+    - CPU 및 메모리 사용량이 급증하게 된다.
+
+### 예외 처리 문제
+
+스레드풀 사용중 한 스레드가 예외를 던지면 해당 스레드는 종료되지만, **스레드 풀 자체는 계속 동작**하게 된다.
+
+이때, 예외처리를 제대로 하지 않으면 스레드가 비정상적으로 종료되게되며, 스레드풀 내의 스레드 개수가 줄어들게 되며 성능저하로 이어지게된다.
+
+### 작업이 긴 프로세스와의 비효율성
+
+스레드풀을 이용할 때 작업이 긴 프로세스와는 잘 안맞을 수 있다.
+
+만약 비선점인 상황에서 작업이 긴 프로세스가 자원을 선점한 경우 다른 작업들이 모두 대기상태로 있기 때문에 전체 처리속도가 저하될 수 있게된다.
+
+따라서, 실시간성이 중요한 서비스에서는 스레드풀의 사용을 긴히 따져봐야한다.
+
+# (선택)프로세스 스케쥴링과 스레드 스케쥴링의 차이점에 대해서 설명해주세요
+
+> 프로세스 스케줄링 : CPU가 어떤 프로세스를 실행할지 결정하는 방식
+> 
+
+> 스레드 스케줄링 : 프로세스 내에서 어떤 스레드를 실행할지 결정하는 방식
+> 
+
+---
+
+### 프로세스 스케줄링
+
+프로세스 스케줄링은 OS가 여러 프로세스중 어떤 프로세스를 실행할지 결정하는 방식이다.
+
+OS는 아래 세가지 스케줄러를 이용하여 다음 작업 프로세스를 선택하게 된다.
+
+1. **장기 스케줄러** (Long-Term Scheduler)
+    - **디스크(저장장치)에서** **실행 가능한 프로세스를 메모리(RAM)으로 로드**하는 역할
+2. **중기 스케줄러** (Medium-Term Scheduler)
+    - 메모리에서 실행중인 프로세스를 **일시적으로 디스크로 내리는** 역할
+    - 즉, 메모리에서 **어떤 프로세스를 일시적으로 중단할지 선택**하는 역할
+    - 메모리 부족 시 프로세스를 임의로 제거함
+3. **단기 스케줄러** (Short-Term Scheduler)
+    - 실행 가능한 프로세스 중 **CPU에 할당할 프로세스를 선택**하는 역할
+    - 컨텍스트 스위칭을 수행
+
+프로세스 스케줄링에서의 컨텍스트 스위칭은 스레드 스케줄링에 비해 상대적으로 무거운 연산이다.
+
+### 스레드 스케줄링
+
+스레드 스케줄링은 한 프로세스 내의 존재하는 스레드 중 **어떤 스레드를 실행할지 결정**하는 방식이다.
+
+프로세스 단위에서의 컨텍스트 스위칭보다는 **가벼운 연산**에 속하게된다.
+
+멀티스레드 환경에서 해당 스케줄링은 각 스레드마다 동기화문제를 신경써야한다.
+
+이는 **OS** 또는 **사용자 프로그램**이 직접 관리를 하게된다.
+
+어디서 관리하는지에 따라 다음과 같이 나뉜다.
+
+- **커널 수준 스레드 스케줄링** (Kernel-Level Thread)
+    - **운영체제가 직접** 스레드를 **생성**, **관리**, 스케줄링하는 방식
+    - OS의 단기 스케줄러가 직접 CPU에 할당
+    - 커널이 개입하기 때문에 컨텍스트 스위칭의 비용이 높다
+    - 하나의 스레드가 블로킹 되더라도 다른 스레드에 영향이 없다.
+- **사용자 수준 스레드 스케줄링** (User-Level Thread)
+    - **프로그램이 직접 스레드를 생성 관리**하는 방식
+    - 커널을 거치지않기 때문에 **컨텍스트 비용이 적다**
+    - 하나의 스레드가 블로킹 되면 같은 프로세스에 속한 다른 스레드도 블로킹될 수 있다.
+        - 사용자 수준 스레드는 **OS에서 개별 스레드로 인식하지 못하기** 때문이다.
+    - 이 경우 OS가 프로세스 단위로 CPU를 할당하기 때문에 병렬성이 불가능하다.
 ---
 ***
 회고
 # 💪 K (Keep) 💪
-- 
+- 요새 학습 습관이 아주 올바르게 잘잡히고있다. 딥다이브하듯이 공부를 계속 진행해보자.
   
 # 😫 P (Problem) 😫
-- 
+- 그래도 어려운건 많다... 
 
 # 🫵 T (Try) 🫵
-- 
+- 어렵더라도 계속 킵 고잉 하도록.
