--- a/Feb/25-02-07.md
+++ b/Feb/25-02-07.md
@@ -2,11 +2,212 @@
 - 딥다이브 진행하기.
 ***
 # 🧑🏻‍💻 학습한 내용 🧑🏻‍💻
+# 스레드의 출현과 그 목적
 
+스레드를 알아보기 전 스레드가 출현한 이유와 그 목적에 대해서 알아보겠습니다.
+
+기존 컴퓨터의 실행단위는 **프로세스**였습니다.
+
+하지만 프로세스를 작업단위로 가져가면서 생기는 **문제점**이 있었는데요 다음과 같습니다.
+
+- 프로세스의 생성 및 소멸에 따른 **오버헤드가 너무 큼**
+- **느린 컨텍스트 스위칭**
+- 프로세스간 **복잡한 통신방법**, **느린 실행속도**
+
+이러한 문제점을 느끼게 되었고 그로인해 프로세스보다 더 작은 실행단위를 필요로 하였고 이에 `스레드`가 탄생하게 되었습니다.
+
+*이때 실행단위란 운영체제의 스케줄링 단위입니다.
+
++) 스레드가 나오게 되면서 기존 실행단위였던 프로세스는 **응용프로그램을 적재하는 단위**로 변하게 되었습니다.
+
+---
+
+# 스레드
+
+스레드는 한 프로세스 내에 존재하는 실행단위 입니다.
+
+프로세스를 실행단위로 가져가면서 생기는 문제점으로 인해 탄생하게 되었는데요. 다음과같은 **장점**이 있습니다.
+
+- 상대적으로 **생성 및 소멸에있어 오버헤드가 작음**
+- 프로세스의 공유자원(코드, 데이터, 힙)으로 **간편한 데이터교환**
+- 상대적으로 **빠른 실행 속도**
+- 상대적으로 **빠른 컨텍스트 스위칭**
+    - 하지만 구현방법에 따라 프로세스의 컨텍스트 스위칭과의 컨텍스트 스위칭속도가 비슷할 수 있습니다.
+
+하지만 개발에 있어 은탄(Silver Bullet)은 존재하지 않습니다.
+
+스레드를 사용하며 생기는 단점도 존재하는데요. 다음과 같은 **단점**이 있습니다.
+
+> ❗️ 동기화(Synchronization) 문제
+> 
+
+여러 개의 스레드가 공유자원에 접근할 때 경쟁 상태(Race Condition)이 발생할 수 있는 문제입니다.
+
+`경쟁상태`란 공유자원에 대해 여러 스레드(또는 프로세스)가 **동시에 접근**을 할 때, **타이밍**이나 **순서**에 따라 결과값에 영향을 줄 수 있는 상태를 말합니다. 
+
+![image](https://github.com/user-attachments/assets/67b04974-6509-466b-a715-cd9ffec7124a)
+
+<aside>
+❓
+
+어떤 상황인가요?
+
+</aside>
+
+<aside>
+❗
+
+여러 사람(스레드)이 공용통장(공유자원)에 접근하는 상황입니다.
+
+만약 공유통장에 100만원이 있다고 가정해봅시다.
+
+이때 아주 비슷한 타이밍에 eric이 10만원, rick이 20만원, gray가 30만원을 출금한 후 잔액을 조회하는 상황입니다.
+
+원래는 40만원이 남아있는게 정상적인 상황입니다.
+
+하지만 `eric - 90` `rick - 80` `gray - 70` 이런 식으로 조회가 될 수 있는 문제가 발생하게됩니다. 이게 바로 경쟁상태 입니다.
+
+</aside>
+
+물론, 이 문제는 프로세스 사이에서도 일어날 수 있는 문제지만 스레드는 프로세스보다 더 많은 공유자원을 가지고있기 때문에 발생할 가능성이 더 높습니다.
+
+---
+
+> ❗️ 데드락(Deadlock) 문제 ( = 교착상태 문제)
+> 
+
+해당 문제는 두 개 이상의 스레드가 서로가 가진 자원의 해제를 기다리며 무한 대기 상태에 빠질 수 있는 문제입니다.
+
+이는 `교착 상태`라고도 불리는 문제입니다.
+
+![image](https://github.com/user-attachments/assets/65cb18b1-eea6-4a5a-8d76-c7390c57a86f)
+
+
+<aside>
+❓
+
+어떤 상황인가요
+
+</aside>
+
+<aside>
+❗
+
+- 남자는 햄버거를 소유하고 있으며 감튀를 원하는 상태
+- 여자는 감튀를 소유하고 있으며 햄버거를 원하는 상태
+
+이러한 상황에서 서로 자원(햄버거, 감튀)를 소유만 하고있고 해제를 하지 않는다면 무한정 기다리는 상태가 될것입니다.
+
+</aside>
+
+---
+
+> ❗️ 디버깅의 어려움
+> 
+
+멀티스레드 환경에서는 비결정적 동작(Non - deterministic behavior)이 발생할 가능성이 높기 때문에 재현이 어렵고, 디버깅이 어렵다는 문제점이 있습니다.
+
+특히, 위에서 알아본 `경쟁 상태` , `데드락` 은 특정 실행 환경에서만 발생할 수 있기 때문에 테스트가 까다롭습니다.
+
+---
+
+> ❗️멀티스레드 환경에서 한 스레드가 fork()를 호출한 경우
+> 
+
+이 상황은 단점이라기 보단 멀티스레드 환경에서 조심해야할 점입니다.
+
+`fork()` 란 프로세스를 생성하는 시스템콜 입니다. 
+
+이를 현 상황에 대입해보면 다음과같은 문제가 발생하게 됩니다.
+
+![image](https://github.com/user-attachments/assets/89aec291-d41b-4461-b594-fce79c936717)
+
+
+개발자는 현재 프로세스를 기반으로 새로운 프로세스를 만드는걸 기대했지만 `fork()` 를 **호출한 스레드로만 구성된 프로세스**가 생성된다는 문제입니다.
+
+이는 아주 심각한 문제로 이어질 수 있으니 항상 유의해야 합니다.
+
+---
+
+# 스레드의 생명주기
+
+스레드의 전체적인 **생명주기**는 다음과 같습니다.
+
+
+![image](https://github.com/user-attachments/assets/a8a2f19c-f929-4007-b7fc-1eed012796d6)
+
+
+그림에서도 볼 수 있듯이 스레드는 4가지 상태를 가질 수 있습니다.
+
+### Ready (준비 상태)
+
+> 스레드가 스케줄러로부터 스케줄 되기를 **기다리는** 상태
+> 
+
+준비 상태는 스레드가 생성된 후 스케줄러로 부터 스케줄되어 CPU에 의해 실행될 때 까지 기다리는 상태입니다.
+
+---
+
+### Running (실행 상태)
+
+> 스레드가 CPU에 의해 **실행중**인 상태
+> 
+
+대기중인 스레드가 스케줄러에 의해 스케줄된 경우 `Ready → Running` 상태로 변하게 됩니다.
+
+이때, `Ready` 상태로 돌아가는 경우도 발생하는데요. 다음과같은 경우가 있습니다.
+
+- 스레드에 할당된 시간이 경과한 경우
+- 스레드가 스스로 CPU 사용을 양보(yield)한 경우
+
+---
+
+### Blocked (대기 상태)
+
+> 스레드가 **IO**를 요청하거나 **sleep()**과 같은 시스템 호출로 인해 **커널**에 의해 중단된 상태
+> 
+
+실행중이던 스레드가 다음과 같은 상황일 때 `Blocked` 상태로 변하게 됩니다.
+
+- IO 작업을 요청한 경우
+- `sleep()` 시스템콜 호출
+- 자원 요청
+
+다음과 같은 상황에서 `Ready` 로 상태가 변합니다.
+
+- IO 작업 완료
+- 타임아웃
+- 자원 획득
+
+---
+
+### Terminated (종료 상태)
+
+> 스레드가 **종료**된 상태
+> 
+
+스레드가 종료된 상태입니다. 이때 두가지 종료를 구분할 필요가 있습니다.
+
+### 프로세스 종료
+
+프로세스 종료란 **프로세스가 종료**되는 상황을 말하며 다음과 같은 경우가 있습니다.
+
+- 프로세스에 속한 **모든 스레드가 종료**된 경우
+- **메인 스레드가 종료된 경우** 모든 스레드가 함께 종료되어 프로세스도 종료
+- 프로세스에 속한 **한 스레드에서 `exit()` 시스템콜**을 한 경우
+
+---
+
+### 스레드 종료
+
+스레드 종료란 프로세스에 속한 **한 스레드가 종료**된 상황을 말합니다.
+
+- `pthread_exit()`과 같이 호출한 스레드만 종료됨
+    - 메인 스레드에서도 `phread_exit()`을 하면 main 스레드만 종료
 ***
 회고
 # 💪 K (Keep) 💪
-- 
+- 딥다이브하는 습관을 잘 형성하고있는듯 하다. 앞으로도 킵고잉!!
   
 # 😫 P (Problem) 😫
 - 
