--- a/Feb/25-02-13.md
+++ b/Feb/25-02-13.md
@@ -3,7 +3,214 @@
 - 3주차 과제 시작
 ***
 # 🧑🏻‍💻 학습한 내용 🧑🏻‍💻
+### 정리 키워드
 
+# HTTP 자격증명 헤더
+
+> HTTP 자격증명 헤더 : 클라이언트와 서버간의 인증과정에서 올바른 사용자인지 확인하기 위해 사용되는 헤더
+> 
+
+---
+
+HTTP 자격증명 헤더는 클라이언트와 서버간의 인증과정에서 요청 유저가 올바른 사용자인지 확인하기 위해 사용되는 헤더입니다.
+
+이를 이용하여 인가가 필요한 자원에 접근시 올바른 사용자인지 파악하게 됩니다.
+
+헤더는 아래 두가지가 사용됩니다.
+
+### WWW-Authenticate 헤더
+
+---
+
+이 헤더는 서버가 클라이언트에게 현재 인증이 필요하다고 알릴때 사용하는 헤더입니다.
+
+즉, 접근 권한을 요구하는 경우 사용됩니다.
+
+해당 헤더는 다음과 같이 사용됩니다.
+
+> 클라이언트가 보호된 리소스에 접근을 요청할 때, 서버는 `401 Unauthorized` 응답과 `WWW-Authenticate` 헤더를 함께 전송해달라고 합니다.
+> 
+
+### Authorization 헤더
+
+---
+
+이 헤더는 클라이언트가 서버에 자신을 인증하려 할 때 사용되는 헤더입니다.
+
+해당 헤더는 다음과 같이 사용됩니다.
+
+> `WWW-Authentication` 에 요구된 인증방식에 따라 인증 정보를 `Authorization` 헤더에 포함해 전송합니다.
+> 
+
+# Bearer Token
+
+> Bearer Token : 서버에 보내 요청주체의 신원을 인증할 때 사용하는 토큰입니다.
+> 
+
+---
+
+인증 전반적으로 사용되는 토큰입니다.
+
+이 개념은 “이 토큰을 가진 자(Bearer)는 인증된 사용자로 간주한다”를 기반으로 합니다.
+
+따라서, 이 토큰을 서버에 보내 요청주체의 신원을 인증하게 됩니다.
+
+# JSON Web Token (JWT)
+
+> JWT : JSON 기반의 인증시 사용되는 토큰
+> 
+
+---
+
+JWT는 JSON을 기반으로 한 토큰 인증방식 기술입니다.
+
+서버의 첫 응답시 인증된 유저에게 토큰을 발급해주게 되는데요. 클라이언트는 이를 이용하여 다음 요청부터 세션없이도 자신을 인증할 수 있게 됩니다.
+
+### JWT 구조 (Header, Payload, Signature)
+
+---
+
+JWT는 3가지 구조로 이루어져 있습니다.
+
+![image.png](attachment:da87dfa2-f441-4a43-b9ca-59b759af8a36:image.png)
+
+### Header
+
+> JWT의 헤더에는 토큰의 타입 및 서명 알고리즘 정보가 들어있습니다.
+> 
+
+### Payload
+
+> JWT Payload는 사용자 정보(클레임)을 포함하는 영역입니다.
+> 
+
+### Signature
+
+> JWT Signature는 데이터 위변조를 방지하기 위한 서명 부분입니다.
+> 
+
+---
+
+### JWT 서명 및 암호화 (HMAC, RSA, ECDSA)
+
+---
+
+JWT는 데이터의 위변조를 방지하기위해 서명을 진행합니다. 또한 민감한 데이터의 경우 Payload의 암호화또한 진행하게 됩니다.
+
+서명시 사용하는 알고리즘으로는 `HMAC`, `RSA`, `ECDSA`가 있으며 이를 이용하여 JWT의 무결성을 보장하게 됩니다.
+
+잠시 서명과 암호화의 차이를 알아보고 가겠습니다.
+
+> **서명**
+
+서명은 데이터가 변조되지 않음을 보장하는 개념입니다. → 누구나 볼 수 있습니다.
+> 
+
+> **암호화**
+
+암호화는 민감한 데이터를 보호하는 역할을 하는 개념입니다. → 특정 사람만 볼 수 있습니다.
+> 
+
+각각의 서명 알고리즘을 알아보겠습니다.
+
+### HMAC
+
+> HMAC은 **대칭키** 기반의 해싱 알고리즘입니다.
+
+특정 비밀 키와 해시 함수를 이용하여 메시지의 인증 코드를 생성하게 되빈다.
+
+이 방식은 하나의 키만을 사용하는 대칭키 방식을 사용하므로 해당 서명의 검증 시 같은 키로 데이터가 변조되었는지 여부와 발신자의 신원을 확인할 수 있습니다.
+> 
+
+### RSA
+
+> RSA는 **비대칭 키** 방식의 암호화 알고리즘입니다.
+
+해당 방식은 보안이 강력하다는 특징을 가지고 있습니다. 하지만 HMAC에 비해 속도가 느리다는 단점이 있습니다. 
+
+해당 방식의 경우 **OAuth 2.0** 및 **OICD** 에서 사용되고 있습니다.
+> 
+
+### ECDSA
+
+> ECDSA는 **비대칭 키** 방식의 암호화 알고리즘 입니다.
+
+RSA와 같이 비대칭 키 방식을 사용한다는 공통점이 존재하지만 RSA보다 더 작은 키 크기로 같은 수준의 보안을 제공하게 됩니다.
+
+이를 통해 RSA보다 더 빠르고 효율적입니다.
+
+이 방식은 주로 **블록체인** 및 **모바일 환경**에서 사용되고 있습니다.
+> 
+
+이렇게 서명시 사용되는 알고리즘에 대해서 알아보았습니다. 다음으로는 암호화에서 사용되는 알고리즘에 대해 알아보겠습니다.
+
+### AES
+
+> AES는 **대칭키 암호화** 방식을 사용하는 암호화 알고리즘입니다.
+
+AES는 속도가 매우 빠르며, 강력한 보안을 제공하여 현재 많이 사용되는 대칭 암호화 방식입니다.
+> 
+
+### RSA-OAEP
+
+> RSA-OAEP는 **비대칭키 암호화** 방식을 사용하는 암호화 방식에서 **보안을 더욱 강화**하기 위해 사용되는 **패딩 기법**입니다.
+
+RSA 자체로는 취약할 수 있기 때문에, OAEP를 적용하여 더욱 안전하게 암호화를 진행하게 됩니다.
+> 
+
+---
+
+### 세션 기반 인증과의 비교
+
+---
+
+세션은 Stateful 하고 토큰은 Stateless 합니다.
+
+이게 무슨말일까요?
+
+### 세션
+
+> 만약 세션 방식을 사용한다면 서버의 DB 또는 내부 공간에 세션을 저장해놔야 합니다.
+따라사 서버는 어떤 호스트가 연결이 되어있는지를 계속해서 유지를 해야하는데요. 
+
+따라서 세션방식은 **Stateful** 하다고 볼 수 있습니다.
+> 
+
+### 토큰
+
+> 다만 토큰 방식을 사용하게 된다면 굳이 서버에 저장할 필요가 없습니다.
+
+서버로 요청을 보낼때 **요청데이터와 함께 토큰을 보내** 자신을 인증하게 됩니다.
+이런 방식에서 서버는 굳이 요청을 보낸 주체에 대한 정보를 가지고 있을 필요가 없습니다.
+
+그렇기 때문에 토큰 방식을 **Stateless** 하다고 볼 수 있습니다.
+> 
+
+### Access Token / Refresh Token
+
+---
+
+# OAuth 2.0
+
+### OAuth 1.0과의 차이점
+
+### 보안 강화 대책 (XSS, CSRF, 토큰 탈취 방지)
+
+### 예시 질문
+
+# HTTP 자격증명 헤더가 웹 어플리케이션 보안에서 어떤 역할을 하는지 설명해주세요
+
+# WWW-Authenticate / Authorization 헤더의 차이점에 대해서 설명해주세요
+
+# JWT가 어떤 구성 요소로 이루어져 있으며, 각 요소의 역할은 무엇인지 설명해주세요
+
+# JWT 검증시 서버에서 수행하는 주요 절차에 대해서 설명해주세요
+
+# Access Token과 Refresh Token 두 토큰의 차이와 각각의 역할, 그리고 토큰 갱신 시 고려해야 할 사항에 대해 설명해 주세요.
+
+# 왜 HTTPS가 토큰 기반 인증에서 필수적인지 설명해주세요
+
+# (선택) JWT나 OAuth기반 인증에서 발생할 수 있는 보안 취약점 / 이를 보완하기 위한 대책에는 어떤 것들이 있는지 설명해주세요
 # 회고
 # 💪 K (Keep) 💪
 - 
